issue 31 - footer wrap
I checked the quarto site and they actually hide the footer below a max width. Instead of dealing with wrap/no wrap, I think it makes sense to also hide the footer if the width of the window is small

--- a/_extensions/posit-docs/theme.scss
+++ b/_extensions/posit-docs/theme.scss
@@ -112,11 +112,15 @@ body {
 /* Footer */
 
 .nav-footer {
-  font-family: $font-family-monospace;
-  text-transform: uppercase;
-  font-size: 14px;
+
   border-top: solid #0000001a 0.01em;
-  align-items: center !important;
+
+}
+
+@media only screen and (max-width: 1200px) {
+  .nav-footer {
+    display: none !important;
+  }
 }
 
 .nav-footer .nav-footer-center {
